# spotuify

./: .env.example  .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
.github/workflows/: lint.yml  test.yml
src/spotuify/: __init__.py  __main__.py  app.py
src/spotuify/api/: __init__.py  auth.py  client.py
src/spotuify/screens/: __init__.py  album.py  artist.py  devices.py  help.py  library.py  main.py  playlist.py  search.py
src/spotuify/utils/: __init__.py  config.py  formatting.py
src/spotuify/widgets/: __init__.py  device_selector.py  now_playing.py  player_controls.py  progress_bar.py  search_bar.py  sidebar.py  track_list.py  volume_bar.py
tests/: __init__.py  conftest.py  test_api_auth.py  test_api_client.py  test_app.py  test_config.py  test_formatting.py  test_screens.py  test_widgets.py
