[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "spotuify"
version = "0.1.0"
description = "A comprehensive TUI Spotify player built with Textual and Rich"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [
    { name = "Mark Mercado", email = "mamercad@gmail.com" }
]
keywords = ["spotify", "tui", "terminal", "music", "player", "textual", "rich"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Multimedia :: Sound/Audio :: Players",
]
dependencies = [
    "textual>=0.47.0",
    "rich>=13.7.0",
    "spotipy>=2.23.0",
    "python-dotenv>=1.0.0",
    "httpx>=0.27.0",
    "platformdirs>=4.2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=4.1.0",
    "ruff>=0.3.0",
    "mypy>=1.9.0",
    "textual-dev>=1.5.0",
]

[project.scripts]
spotuify = "spotuify.__main__:main"

[project.urls]
Homepage = "https://github.com/mamercad/spotuify"
Repository = "https://github.com/mamercad/spotuify"
Issues = "https://github.com/mamercad/spotuify/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/spotuify"]

[tool.ruff]
target-version = "py310"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "B", "C4", "SIM"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
